<resources>
    <string name="app_name">Riquelmito Jobs</string>
    <string name="navigation_view_subtitle">Atrápalos a todos!</string>
    <string name="title_activity_iniciar_sesion">Iniciar sesión</string>
    <string name="login_iniciar_sesion">Iniciar Sesión</string>
    <string name="login_email">E-mail</string>
    <string name="login_contrasenia">Contraseña</string>
    <string name="login_eres_nuevo">¿Eres nuevo?</string>
    <string name="title_activity_crear_cuenta">Crear cuenta</string>
    <string name="singup_crear_cuenta">Crear Cuenta</string>
    <string name="singup_email">E-mail</string>
    <string name="singup_contrasenia">Contraseña</string>
    <string name="singup_reingrese_contrasenia">Reingrese la contraseña</string>
    <string name="singup_tipo_usuario">Tipo de usuario</string>
    <string name="title_activity_perfil_usuario_postulante">Perfil de usuario</string>
    <string name="perfil_nombre">Nombre</string>
    <string name="perfil_apellido">Apellido</string>
    <string name="perfil_dni">DNI</string>
    <string name="perfil_fecha_nacimiento">Fecha de nacimiento</string>
    <string name="perfil_hint_fecha_nacimiento">DD/MM/AAAA</string>
    <string name="perfil_sexo">Sexo</string>
    <string name="perfil_provincia">Provincia</string>
    <string name="perfil_hint_provincia">Provincia de residencia</string>
    <string name="perfil_ciudad">Ciudad</string>
    <string name="perfil_hint_ciudad">Ciudad de residencia</string>
    <string name="perfil_telefono">Teléfono</string>
    <string name="perfil_hint_telefono">Nro de teléfono</string>
    <string name="perfil_mail_publico">E-mail público</string>
    <string name="perfil_hint_mail_publico">mail@domain.com</string>
    <string name="perfil_seleccionar_ubicacion">Seleccionar ubicación</string>
    <string name="title_activity_perfil_profesional">Perfil profesional</string>
    <string name="perfil_prof_experiencia">Experiencia profesional</string>
    <string name="perfil_prof_formacion">Formación</string>
    <string name="perfil_prof_idiomas">Idiomas</string>
    <string name="perfil_prof_adjuntar_cv">Adjuntar curriculum</string>
    <string name="perfil_prof_hint_adjuntar_cv">Adjuntar curriculum</string>
    <string name="perfil_prof_quien_ve_mi_cv">Quién puede ver mi Curriculum</string>
    <string name="perfil_prof_subiendo_cv">Subiendo Curriculum Vitae</string>
    <string name="perfil_prof_terminado_subir_cv">Se subió el Curriculum con éxito</string>
    <string name="perfil_prof_error_al_subir_cv">No se pudo terminar de subir el Curriculum</string>
    <string name="title_activity_buscar_trabajo">Buscar trabajo</string>
    <string name="buscar_traba_rubro">Rubro</string>
    <string name="buscar_traba_distancia">Distancia máxima (en Km)</string>
    <string name="buscar_traba_salario">Salario mínimo (en ARP)</string>
    <string name="title_activity_configuracion_notificaciones_postulante">Settings</string>
    <string name="settings_notificaciones_titulo_grupo">Notificar cuando</string>
    <string name="settings_notificaciones_cierra_empleo_interes">Se cierra empleo de interés</string>
    <string name="settings_notificaciones_cierra_empleo_postulado">Se cierra empleo en que estaba postulado</string>
    <string name="settings_notificaciones_cambia_empleo_interes">Cambian condiciones de un empleo de interés</string>
    <string name="settings_notificaciones_cambia_empleo_postulado">Cambian condiciones de un empleo en que estaba postulado</string>
    <string name="settings_notificaciones_nuevo_postulante">Un usuario se postula en una de mis ofertas</string>
    <string name="settings_notificaciones_ringtone">Tono de notificación</string>
    <string name="title_activity_crear_trabajo">Crear trabajo</string>
    <string name="crear_traba_rubro">Rubro</string>
    <string name="crear_traba_cargo">Cargo</string>
    <string name="crear_traba_hint_cargo">Nombre del cargo</string>
    <string name="crear_traba_descripcion">Descripción del cargo</string>
    <string name="crear_traba_hint_descripcion">Enuncie las responsabilidades más relevantes del cargo</string>
    <string name="crear_traba_perfil_empleado">Perfil de empleado</string>
    <string name="crear_traba_hint_perfil_empleado">Describa las caracteristicas buscadas en el postulante</string>
    <string name="crear_traba_experiencia_empleado">Experiencia de empleado</string>
    <string name="crear_traba_hint_experiencia_empleado">Describa la experiencia mínima que deberá tener en el postulante</string>
    <string name="crear_traba_dias_laborables">Días</string>
    <string name="crear_traba_horario">Horario</string>
    <string name="crear_traba_salario">Salario estimado</string>
    <string name="crear_traba_ubicacion">Seleccionar ubicación</string>
    <string name="title_activity_trabajos_postulados">Trabajos postulados</string>
    <string name="title_activity_trabajos_de_interes">Trabajos de interés</string>
    <string name="title_activity_seleccionar_ubicacion_postulante">Seleccionar ubicación</string>
    <string name="title_activity_ofertas_activas">Ofertas activas</string>
    <string name="title_activity_usuarios_postulados_a_trabajo">Usuarios postulados</string>
    <string name="title_activity_info_trabajo">Detalles de trabajo</string>
    <string name="info_trabajo_consultar_ubicacion">Consultar ubicación</string>
    <string name="info_trabajo_marcar_de_interes">Marcar de Interés</string>
    <string name="info_trabajo_desmarcar_de_interes">Desmarcar Interés</string>
    <string name="info_trabajo_postular">Postular</string>
    <string name="info_trabajo_despostular">Des-postular</string>
    <string name="info_trabajo_editar_oferta">Editar oferta</string>
    <string name="info_trabajo_cerrar_oferta">Cerrar oferta</string>
    <string name="info_trabajo_ver_postulantes">Ver postulantes</string>
    <string name="info_trabajo_postularse">Postularse</string>
    <string name="info_trabajo_despostularse">Des-postular</string>
    <string name="title_activity_info_postulante">Información de postulante</string>
    <string name="info_postulante_descargar_cv">Descargar Curriculum Vitae</string>
    <string name="title_dialogo_campos_invalidos">Campos inválidos</string>
    <string name="title_dialogo_seleccionar_idiomas">Seleccionar Idiomas</string>
    <string name="title_dialogo_funcionalidad_no_desarrollada">Funcionalidad no desarrollada</string>
    <string name="title_dialog_no_hay_cambios">No se detectaron modificaciones</string>
    <string name="title_dialog_cambios_guardados">Cambios guardados</string>
    <string name="title_dialog_sin_conexion">Sin conexión con el servidor</string>
    <string name="title_dialog_se_registro_usuario">Nuevo Riquelmito a la vista</string>
    <string name="title_dialog_trabajo_guardado">Propuesta de trabajo guardada</string>
    <string name="title_dialog_email_no_registrado">Email y/o contraseña inválidos</string>
    <string name="title_dialog_contrasenia_incorrecta">Email y/o contraseña inválidos</string>
    <string name="marker_detail_lating">(%1$.2f, %2$.2f)</string>
    <string name="menu_editar_perfil_usuario">Editar perfil de usuario</string>
    <string name="menu_editar_perfil_profesional">Editar perfil profesional</string>
    <string name="menu_buscar_trabajo">Buscar empleo</string>
    <string name="menu_empleos_postulados">Empleos postulados</string>
    <string name="menu_empleos_de_interes">Empleos de interés</string>
    <string name="menu_aniadir_empleo">Añadir empleo</string>
    <string name="menu_ofertas_activas">Ofertas activas</string>
    <string name="menu_ofertas_cerradas">Ofertas cerradas</string>
    <string name="menu_configurar_notificaciones">Configurar notificaciones</string>
    <string name="menu_preferencias">Preferencias</string>
    <string name="menu_seleccionar_ubicacion_postulante">Seleccionar ubicación postulante</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="fragment_home_texto_bienvenida1">¡Bienvenido!</string>
    <string name="fragment_home_texto_bienvenida2">¡Te estábamos esperando!</string>
    <string name="opcion_aceptar">Aceptar</string>
    <string name="opcion_cancelar">Cancelar</string>
    <string name="opcion_ok">Ok</string>
    <string name="opcion_actualizar">Actualizar</string>
    <string name="todos">Todos</string>
    <string name="desconocido">.?????</string>
    <string name="tipo_usuario_empleador">Empleador</string>
    <string name="tipo_usuario_postulante">Postulante</string>
    <string name="sexo_masculino">Masculino</string>
    <string name="sexo_femenino">Femenino</string>
    <string name="sexo_otro">Otro</string>
    <string name="quienvemicv_solo_yo">Solo yo</string>
    <string name="quienvemicv_todos">Todos</string>
    <string name="rubro_atencion_al_publico">Atención al público</string>
    <string name="rubro_comunicaciones">Comunicaciones</string>
    <string name="rubro_construccion">Construcción</string>
    <string name="rubro_electricidad">Electricidad</string>
    <string name="rubro_informatica">Informática</string>
    <string name="rubro_rrhh">Recursos Humanos</string>
    <string name="rubro_salud">Salud</string>
    <string name="rubro_transporte">Transporte</string>
    <string name="idiomas_aleman">Alemán</string>
    <string name="idiomas_chino">Chino Mandarín</string>
    <string name="idiomas_espaniol">Español</string>
    <string name="idiomas_frances">Francés</string>
    <string name="idiomas_guarani">Guaraní antiguo</string>
    <string name="idiomas_ingles">Inglés</string>
    <string name="idiomas_italiano">Italiano</string>
    <string name="idiomas_japones">Japonés</string>
    <string name="idiomas_portugues">Portugués</string>
    <string name="idiomas_ruso">Ruso</string>
    <string name="horario_diurno">Diurno</string>
    <string name="horario_nocturno">Nocturno</string>
    <string name="horario_discontinuo">Discontinuo</string>
    <string name="horario_rotativo">Rotativo</string>
    <string name="horario_media_matutina">Media jornada- Matutina</string>
    <string name="horario_media_vespertina">Media jornada- Vespertina</string>
    <string name="horario_media_nocturna">Media jornada- Nocturna</string>
    <string name="horario_media_rotativa">Media jornada- Rotativo</string>
    <string name="dias_lab_lun_viern">Lunes a Viernes</string>
    <string name="dias_lab_lun_sab">Lunes a Sábados</string>
    <string name="dias_lab_mart_sab">Martes a Sábado</string>
    <string name="dias_lab_mart_domin">Martes a Domingo</string>
    <string name="dias_lab_feriad_domin">Feriados y Domingos</string>
    <string name="dias_lab_feriad_find_seman">Feriados y Fines de semana</string>
    <string name="dias_lab_a_turnos">Trabajo a turnos</string>
    <string name="fila_horario">Horario:</string>
    <string name="fila_salario_estimado">Salario estimado:</string>
    <string name="fila_fecha_publicacion">Publicado:</string>
    <string name="fila_edad_postulante">Edad:</string>
    <string name="fila_anios_postulante">años.</string>
    <string name="fila_sexo_postulante">Sexo:</string>
    <string name="fila_ciudad_postulante">Ciudad:</string>
    <string name="fila_nombre_postulante_desconocido">Wild Riquelmito appeared!</string>
    <string name="fila_ubicacion_desconocida">No hay datos de ubcación en la Pokédex</string>
    <string name="dialogo_error_formato_email_invalido">-El formato de Email no es válido.</string>
    <string name="dialogo_error_contrasenias_distintas">-Las contraseñas ingresadas deben ser iguales.</string>
    <string name="dialogo_error_longitud_contrasenia_insuficiente1">-La contraseña debe tener al menos.</string>
</resources>