<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_crear_trabajo"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_aniadir_empleo" />
        <item
            android:id="@+id/nav_ofertas_activas"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_ofertas_activas" />
        <item
            android:id="@+id/nav_ofertas_cerradas"
            android:icon="@android:drawable/ic_delete"
            android:title="@string/menu_ofertas_cerradas" />
    </group>

    <item android:title="@string/menu_preferencias">
        <menu>
            <item
                android:id="@+id/nav_edit_perfil_empleador"
                android:icon="@android:drawable/ic_menu_edit"
                android:title="@string/menu_editar_perfil_usuario" />
            <item
                android:id="@+id/nav_preferencias_empleador"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/menu_configurar_notificaciones" />
        </menu>
    </item>

    <group>
        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/menu_cerrar_sesion" />
    </group>

</menu>
